[package]
name = "suriano-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json_path = "0.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
annorepo_client = { version = "0.1", path = "../annorepo_rust_client" }
